--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-namespace": "off",
+        "@typescript-eslint/triple-slash-reference": "off"
     }
 }
